Bug 47105 - UI: Data filter disables "Range contains column labels"
Summary: UI: Data filter disables "Range contains column labels"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:3.6.0 target:3.5.2
Keywords:
: 47618 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-08 08:36 UTC by pierre-yves samyn
Modified: 2017-06-08 09:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-03-08 08:36:43 UTC
Hello 

1. File> New> Spreadsheet (same problem with an existing one)
2. Type a, b, c, d in A1, A2, A3,A4
3. Select A1
4. Data> Filter> Standard filter
5. Clic on More Options

Expected result: can uncheck "range contains columns labels"
Actual result : checkbox disabled

Workaround : need to define before the data range via Data> Define Range and specify what you want for this

This seems to be a regression : user doesn't need/want to define a data range for such a simple filter operation.

may be related to : https://bugs.freedesktop.org/show_bug.cgi?id=40426 ?

Regards
Pierre-Yves
Comment 1 Luc Novales 2012-03-08 09:35:15 UTC
Hello,

(In reply to comment #0)

> Hello 
> 
> 1. File> New> Spreadsheet (same problem with an existing one)
> 2. Type a, b, c, d in A1, A2, A3,A4
> 3. Select A1
> 4. Data> Filter> Standard filter
> 5. Clic on More Options
> 
> Expected result: can uncheck "range contains columns labels"
> Actual result : checkbox disabled


All rigth, and the opposite have the same effect :

If you select a range not from line 1 (A6:C5 for example),
"range contains columns labels" is unchecked and you cannot check it.

Expected result: can check "range contains columns labels"
Actual result : checkbox disabled

Workaround is correct.

Problem is present in LibO 3.4.5 to.

Regards,
Luc.
Comment 2 Markus Mohrhard 2012-03-08 14:56:29 UTC
Let me have a look at that too.
Comment 3 Not Assigned 2012-03-08 17:05:49 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=259839dcb9ee74c3a24bbec12de4ec92b56ad62e

use new anonymous db name in filter dlg, fdo#47105
Comment 4 Not Assigned 2012-03-09 11:50:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bbdd80a3812afc11d829ae7fa6ecc55f7b29586a&g=libreoffice-3-5

use new anonymous db name in filter dlg, fdo#47105


It will be available in LibreOffice 3.5.2.
Comment 5 Markus Mohrhard 2012-03-20 19:46:24 UTC
*** Bug 47618 has been marked as a duplicate of this bug. ***
Comment 6 pierre-yves samyn 2012-08-25 15:58:16 UTC
Hello 

WORKSFORME with Version 3.6.1.2 (Build ID: e29a214) & windows 764bits

Regards
Pierre-Yves