use new anonymous db name in filter dlg, fdo#47105