sc/source/ui/inc/filtdlg.hxx
@@ -127,7 +127,6 @@ private:
     FixedText       aFtDbAreaLabel;
     FixedInfo       aFtDbArea;
     const rtl::OUString aStrUndefined;
-    const rtl::OUString aStrNoName;
     const rtl::OUString aStrNone;
 
     const rtl::OUString aStrEmpty;
